# bindkey-tinyesp

./: Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs
src/crypto/: aes.rs  disk_crypto.rs  disk_layout.rs  disk_meta.rs  encrypted_disk.rs  mod.rs  secure_element.rs
src/fingerprint/: fingerprint.rs  mod.rs
src/fingerprint/BMLite/: bindings.h
src/software_link/: mod.rs  task.rs  test_com.rs
src/spi_link/: api_spi.rs  mod.rs  pins.rs  protocol.rs  spi_master.rs
src/usb_emulation/: fake_usb.rs  mod.rs
