[package]
name = "bindkey-tinyesp"
version = "0.1.0"
authors = ["ouiyamcode <williaminiziato54@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "bindkey-tinyesp"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-sys = { version = "0.36", features = ["native"] }
anyhow = { version = "1.0", default-features = false }
lazy_static = { version = "1.5", default-features = false }

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/tinyusb", version = "0.17.0~2" }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/usb_emulation/esp-usb/device/esp_tinyusb"]
bindings_header = "src/usb_emulation/esp-usb/device/esp_tinyusb/bindings.h"
bindings_module = "esp_tinyusb"
bindings_include_dirs = [
    "src/usb_emulation/esp-usb/device/esp_tinyusb/include",
    "src/usb_emulation/esp-usb/device/esp_tinyusb/include_private",   
]


[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "src/fingerprint/BMLite"
bindings_header = "src/fingerprint/BMLite/bindings.h"
bindings_module = "bmlite"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "src/crypto/esp-cryptoauthlib"
bindings_header = "src/crypto/esp-cryptoauthlib/bindings.h"
bindings_module = "esp_cryptoauthlib"
bindings_include_dirs = [
    "src/crypto/esp-cryptoauthlib",
    "src/crypto/esp-cryptoauthlib/cryptoauthlib/lib",
    "src/crypto/esp-cryptoauthlib/port/include"
]
